# toysort

./: .gitignore  CMakeLists.txt  README.md  go.sh
src/: heapsort.cpp  heapsort.h  insertsort.cpp  insertsort.h  main.cpp  mapsort.cpp  mapsort.h  mergesort.cpp  mergesort.h  quicksort.cpp  quicksort.h  quicksort2.cpp  quicksort2.h  selectsort.cpp  selectsort.h  shellsort.h  sort.h  stdsort.cpp  stdsort.h  stdstablesort.cpp  stdstablesort.h  timsort.cpp  timsort.h  toysort1.cpp  toysort1.h  toysort2.cpp  toysort2.h
src/util/: stack.h
