PROJECT (HELLO)

CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -Wall -g -ggdb ")

SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall")

AUX_SOURCE_DIRECTORY(src SRC_LIST)

MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})

MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})

ADD_EXECUTABLE(toysort ${SRC_LIST})
